scripts/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Comment
    Letter
    reserved

Grammar

Rule 0     S' -> program
Rule 1     program -> list
Rule 2     numOrLetter -> Num
Rule 3     numOrLetter -> idLetter
Rule 4     list -> list declaration
Rule 5     list -> declaration
Rule 6     declaration -> void_KW idNum Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
Rule 7     declaration -> type idNum Opening_Parentheses parameter Closing_Parentheses statement
Rule 8     declaration -> void_KW idLetter Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
Rule 9     declaration -> type idLetter Opening_Parentheses parameter Closing_Parentheses statement
Rule 10    declaration -> type variableList Semicolon
Rule 11    variableList -> variableList Comma varInitialization
Rule 12    variableList -> varInitialization
Rule 13    varInitialization -> varForm
Rule 14    varInitialization -> varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
Rule 15    varForm -> idLetter Opening_Bracket Num Closing_Bracket
Rule 16    varForm -> idLetter
Rule 17    type -> Boolean_KW
Rule 18    type -> Character_KW
Rule 19    type -> Integer_KW
Rule 20    type -> char_KW
Rule 21    type -> bool_KW
Rule 22    type -> int_KW
Rule 23    parameter -> listOfParameters
Rule 24    parameter -> <empty>
Rule 25    listOfParameters -> listOfParameters Semicolon paramTypeList
Rule 26    listOfParameters -> paramTypeList
Rule 27    paramTypeList -> type paramList
Rule 28    paramList -> paramList Comma paramId
Rule 29    paramList -> paramId
Rule 30    localDeclarations -> localDeclarations Static_KW type variableList Semicolon
Rule 31    localDeclarations -> localDeclarations type variableList Semicolon
Rule 32    localDeclarations -> <empty>
Rule 33    paramId -> idLetter
Rule 34    paramId -> idLetter Opening_Bracket Closing_Bracket
Rule 35    statementList -> statement statementList
Rule 36    statementList -> <empty>
Rule 37    statement -> phrase
Rule 38    statement -> compoundPhrase
Rule 39    statement -> selectPhrase
Rule 40    statement -> iterationPhrase
Rule 41    statement -> returnPhrase
Rule 42    statement -> continue
Rule 43    compoundPhrase -> Opening_Brace localDeclarations statementList Closing_Brace
Rule 44    phrase -> allExpression Semicolon
Rule 45    phrase -> Semicolon
Rule 46    selectPhrase -> If_KW Opening_Parentheses eachExpression Closing_Parentheses ifBody
Rule 47    selectPhrase -> If_KW Opening_Parentheses eachExpression Closing_Parentheses Opening_Brace ifBody ifBody Closing_Brace
Rule 48    ifBody -> statement
Rule 49    ifBody -> statement Other_KW statement
Rule 50    ifBody -> Semicolon
Rule 51    iterationPhrase -> Till_KW Opening_Parentheses eachExpression Closing_Parentheses statement
Rule 52    returnPhrase -> ComeBack_KW Semicolon
Rule 53    returnPhrase -> GiveBack_KW allExpression Semicolon
Rule 54    returnPhrase -> GiveBack_KW numOrLetter Semicolon
Rule 55    continue -> Continue_KW Semicolon
Rule 56    allExpression -> alterable mathOp allExpression
Rule 57    allExpression -> alterable PP
Rule 58    allExpression -> alterable MM
Rule 59    allExpression -> eachExpression
Rule 60    allExpression -> alterable mathOp alterable
Rule 61    mathOp -> Equal
Rule 62    mathOp -> PlusEqual
Rule 63    mathOp -> MinusEqual
Rule 64    mathOp -> TimesEqual
Rule 65    mathOp -> DivideEqual
Rule 66    eachExpression -> eachExpression logicOp eachExpression
Rule 67    eachExpression -> eachExpression logicOp Then_KW eachExpression
Rule 68    eachExpression -> logicOp eachExpression
Rule 69    eachExpression -> relExpression
Rule 70    eachExpression -> eachExpression logicOp Else_KW eachExpression
Rule 71    relExpression -> mathEXP compareType mathEXP
Rule 72    relExpression -> mathEXP
Rule 73    compareType -> equal
Rule 74    compareType -> nonEqual
Rule 75    equal -> LEqual
Rule 76    equal -> GEqual
Rule 77    equal -> EEqual
Rule 78    nonEqual -> GreaterOP
Rule 79    nonEqual -> LessOP
Rule 80    nonEqual -> NonEqualOP
Rule 81    mathEXP -> unaryExpression
Rule 82    mathEXP -> mathEXP op mathEXP
Rule 83    op -> Plus
Rule 84    op -> Minus
Rule 85    op -> Times
Rule 86    op -> Divide
Rule 87    op -> ModeOP
Rule 88    unaryExpression -> unaryop unaryExpression
Rule 89    unaryExpression -> factor
Rule 90    unaryop -> Minus
Rule 91    unaryop -> Times
Rule 92    unaryop -> QMark
Rule 93    factor -> inalterable
Rule 94    factor -> alterable
Rule 95    alterable -> numOrLetter
Rule 96    alterable -> alterable Opening_Bracket allExpression Closing_Bracket
Rule 97    alterable -> alterable Dot numOrLetter
Rule 98    inalterable -> Opening_Parentheses allExpression Closing_Parentheses
Rule 99    inalterable -> constant
Rule 100   inalterable -> idLetter Opening_Parentheses args Closing_Parentheses
Rule 101   args -> arguments
Rule 102   args -> <empty>
Rule 103   arguments -> arguments Comma allExpression
Rule 104   arguments -> allExpression
Rule 105   constant -> Const_KW
Rule 106   constant -> True_KW
Rule 107   constant -> False_KW
Rule 108   logicOp -> DoubleAnd
Rule 109   logicOp -> DoubleOr
Rule 110   logicOp -> Tilda
Rule 111   logicOp -> And_KW
Rule 112   logicOp -> Or_KW

Terminals, with rules where they appear

And_KW               : 111
Boolean_KW           : 17
Character_KW         : 18
Closing_Brace        : 6 8 43 47
Closing_Bracket      : 15 34 96
Closing_Parentheses  : 6 7 8 9 14 46 47 51 98 100
Colon                : 14
ComeBack_KW          : 52
Comma                : 11 28 103
Comment              : 
Const_KW             : 105
Continue_KW          : 55
Divide               : 86
DivideEqual          : 65
Dot                  : 97
DoubleAnd            : 108
DoubleOr             : 109
EEqual               : 77
Else_KW              : 70
Equal                : 61
False_KW             : 107
GEqual               : 76
GiveBack_KW          : 53 54
GreaterOP            : 78
If_KW                : 46 47
Integer_KW           : 19
LEqual               : 75
LessOP               : 79
Letter               : 
MM                   : 58
Minus                : 84 90
MinusEqual           : 63
ModeOP               : 87
NonEqualOP           : 80
Num                  : 2 15
Opening_Brace        : 6 8 43 47
Opening_Bracket      : 15 34 96
Opening_Parentheses  : 6 7 8 9 14 46 47 51 98 100
Or_KW                : 112
Other_KW             : 49
PP                   : 57
Plus                 : 83
PlusEqual            : 62
QMark                : 92
Semicolon            : 10 25 30 31 44 45 50 52 53 54 55
Static_KW            : 30
Then_KW              : 67
Tilda                : 110
Till_KW              : 51
Times                : 85 91
TimesEqual           : 64
True_KW              : 106
bool_KW              : 21
char_KW              : 20
error                : 
idLetter             : 3 8 9 15 16 33 34 100
idNum                : 6 7
int_KW               : 22
reserved             : 
void_KW              : 6 8

Nonterminals, with rules where they appear

allExpression        : 44 53 56 96 98 103 104
alterable            : 56 57 58 60 60 94 96 97
args                 : 100
arguments            : 101 103
compareType          : 71
compoundPhrase       : 38
constant             : 99
continue             : 42
declaration          : 4 5
eachExpression       : 14 46 47 51 59 66 66 67 67 68 70 70
equal                : 73
factor               : 89
ifBody               : 46 47 47
inalterable          : 93
iterationPhrase      : 40
list                 : 1 4
listOfParameters     : 23 25
localDeclarations    : 30 31 43
logicOp              : 66 67 68 70
mathEXP              : 71 71 72 82 82
mathOp               : 56 60
nonEqual             : 74
numOrLetter          : 54 95 97
op                   : 82
paramId              : 28 29
paramList            : 27 28
paramTypeList        : 25 26
parameter            : 6 7 8 9
phrase               : 37
program              : 0
relExpression        : 69
returnPhrase         : 41
selectPhrase         : 39
statement            : 6 7 8 9 35 48 49 49 51
statementList        : 35 43
type                 : 7 9 10 27 30 31
unaryExpression      : 81 88
unaryop              : 88
varForm              : 13 14
varInitialization    : 11 12
variableList         : 10 11 30 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . list
    (4) list -> . list declaration
    (5) list -> . declaration
    (6) declaration -> . void_KW idNum Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (7) declaration -> . type idNum Opening_Parentheses parameter Closing_Parentheses statement
    (8) declaration -> . void_KW idLetter Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (9) declaration -> . type idLetter Opening_Parentheses parameter Closing_Parentheses statement
    (10) declaration -> . type variableList Semicolon
    (17) type -> . Boolean_KW
    (18) type -> . Character_KW
    (19) type -> . Integer_KW
    (20) type -> . char_KW
    (21) type -> . bool_KW
    (22) type -> . int_KW

    void_KW         shift and go to state 4
    Boolean_KW      shift and go to state 6
    Character_KW    shift and go to state 7
    Integer_KW      shift and go to state 8
    char_KW         shift and go to state 9
    bool_KW         shift and go to state 10
    int_KW          shift and go to state 11

    program                        shift and go to state 1
    list                           shift and go to state 2
    declaration                    shift and go to state 3
    type                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> list .
    (4) list -> list . declaration
    (6) declaration -> . void_KW idNum Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (7) declaration -> . type idNum Opening_Parentheses parameter Closing_Parentheses statement
    (8) declaration -> . void_KW idLetter Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (9) declaration -> . type idLetter Opening_Parentheses parameter Closing_Parentheses statement
    (10) declaration -> . type variableList Semicolon
    (17) type -> . Boolean_KW
    (18) type -> . Character_KW
    (19) type -> . Integer_KW
    (20) type -> . char_KW
    (21) type -> . bool_KW
    (22) type -> . int_KW

    $end            reduce using rule 1 (program -> list .)
    void_KW         shift and go to state 4
    Boolean_KW      shift and go to state 6
    Character_KW    shift and go to state 7
    Integer_KW      shift and go to state 8
    char_KW         shift and go to state 9
    bool_KW         shift and go to state 10
    int_KW          shift and go to state 11

    declaration                    shift and go to state 12
    type                           shift and go to state 5

state 3

    (5) list -> declaration .

    void_KW         reduce using rule 5 (list -> declaration .)
    Boolean_KW      reduce using rule 5 (list -> declaration .)
    Character_KW    reduce using rule 5 (list -> declaration .)
    Integer_KW      reduce using rule 5 (list -> declaration .)
    char_KW         reduce using rule 5 (list -> declaration .)
    bool_KW         reduce using rule 5 (list -> declaration .)
    int_KW          reduce using rule 5 (list -> declaration .)
    $end            reduce using rule 5 (list -> declaration .)


state 4

    (6) declaration -> void_KW . idNum Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (8) declaration -> void_KW . idLetter Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace

    idNum           shift and go to state 13
    idLetter        shift and go to state 14


state 5

    (7) declaration -> type . idNum Opening_Parentheses parameter Closing_Parentheses statement
    (9) declaration -> type . idLetter Opening_Parentheses parameter Closing_Parentheses statement
    (10) declaration -> type . variableList Semicolon
    (11) variableList -> . variableList Comma varInitialization
    (12) variableList -> . varInitialization
    (13) varInitialization -> . varForm
    (14) varInitialization -> . varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
    (15) varForm -> . idLetter Opening_Bracket Num Closing_Bracket
    (16) varForm -> . idLetter

    idNum           shift and go to state 15
    idLetter        shift and go to state 16

    variableList                   shift and go to state 17
    varInitialization              shift and go to state 18
    varForm                        shift and go to state 19

state 6

    (17) type -> Boolean_KW .

    idNum           reduce using rule 17 (type -> Boolean_KW .)
    idLetter        reduce using rule 17 (type -> Boolean_KW .)


state 7

    (18) type -> Character_KW .

    idNum           reduce using rule 18 (type -> Character_KW .)
    idLetter        reduce using rule 18 (type -> Character_KW .)


state 8

    (19) type -> Integer_KW .

    idNum           reduce using rule 19 (type -> Integer_KW .)
    idLetter        reduce using rule 19 (type -> Integer_KW .)


state 9

    (20) type -> char_KW .

    idNum           reduce using rule 20 (type -> char_KW .)
    idLetter        reduce using rule 20 (type -> char_KW .)


state 10

    (21) type -> bool_KW .

    idNum           reduce using rule 21 (type -> bool_KW .)
    idLetter        reduce using rule 21 (type -> bool_KW .)


state 11

    (22) type -> int_KW .

    idNum           reduce using rule 22 (type -> int_KW .)
    idLetter        reduce using rule 22 (type -> int_KW .)


state 12

    (4) list -> list declaration .

    void_KW         reduce using rule 4 (list -> list declaration .)
    Boolean_KW      reduce using rule 4 (list -> list declaration .)
    Character_KW    reduce using rule 4 (list -> list declaration .)
    Integer_KW      reduce using rule 4 (list -> list declaration .)
    char_KW         reduce using rule 4 (list -> list declaration .)
    bool_KW         reduce using rule 4 (list -> list declaration .)
    int_KW          reduce using rule 4 (list -> list declaration .)
    $end            reduce using rule 4 (list -> list declaration .)


state 13

    (6) declaration -> void_KW idNum . Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace

    Opening_Parentheses shift and go to state 20


state 14

    (8) declaration -> void_KW idLetter . Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace

    Opening_Parentheses shift and go to state 21


state 15

    (7) declaration -> type idNum . Opening_Parentheses parameter Closing_Parentheses statement

    Opening_Parentheses shift and go to state 22


state 16

    (9) declaration -> type idLetter . Opening_Parentheses parameter Closing_Parentheses statement
    (15) varForm -> idLetter . Opening_Bracket Num Closing_Bracket
    (16) varForm -> idLetter .

    Opening_Parentheses shift and go to state 23
    Opening_Bracket shift and go to state 24
    Colon           reduce using rule 16 (varForm -> idLetter .)
    Semicolon       reduce using rule 16 (varForm -> idLetter .)
    Comma           reduce using rule 16 (varForm -> idLetter .)


state 17

    (10) declaration -> type variableList . Semicolon
    (11) variableList -> variableList . Comma varInitialization

    Semicolon       shift and go to state 25
    Comma           shift and go to state 26


state 18

    (12) variableList -> varInitialization .

    Semicolon       reduce using rule 12 (variableList -> varInitialization .)
    Comma           reduce using rule 12 (variableList -> varInitialization .)


state 19

    (13) varInitialization -> varForm .
    (14) varInitialization -> varForm . Colon Opening_Parentheses eachExpression Closing_Parentheses

    Semicolon       reduce using rule 13 (varInitialization -> varForm .)
    Comma           reduce using rule 13 (varInitialization -> varForm .)
    Colon           shift and go to state 27


state 20

    (6) declaration -> void_KW idNum Opening_Parentheses . parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (23) parameter -> . listOfParameters
    (24) parameter -> .
    (25) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (26) listOfParameters -> . paramTypeList
    (27) paramTypeList -> . type paramList
    (17) type -> . Boolean_KW
    (18) type -> . Character_KW
    (19) type -> . Integer_KW
    (20) type -> . char_KW
    (21) type -> . bool_KW
    (22) type -> . int_KW

    Closing_Parentheses reduce using rule 24 (parameter -> .)
    Boolean_KW      shift and go to state 6
    Character_KW    shift and go to state 7
    Integer_KW      shift and go to state 8
    char_KW         shift and go to state 9
    bool_KW         shift and go to state 10
    int_KW          shift and go to state 11

    parameter                      shift and go to state 28
    listOfParameters               shift and go to state 29
    paramTypeList                  shift and go to state 30
    type                           shift and go to state 31

state 21

    (8) declaration -> void_KW idLetter Opening_Parentheses . parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (23) parameter -> . listOfParameters
    (24) parameter -> .
    (25) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (26) listOfParameters -> . paramTypeList
    (27) paramTypeList -> . type paramList
    (17) type -> . Boolean_KW
    (18) type -> . Character_KW
    (19) type -> . Integer_KW
    (20) type -> . char_KW
    (21) type -> . bool_KW
    (22) type -> . int_KW

    Closing_Parentheses reduce using rule 24 (parameter -> .)
    Boolean_KW      shift and go to state 6
    Character_KW    shift and go to state 7
    Integer_KW      shift and go to state 8
    char_KW         shift and go to state 9
    bool_KW         shift and go to state 10
    int_KW          shift and go to state 11

    parameter                      shift and go to state 32
    listOfParameters               shift and go to state 29
    paramTypeList                  shift and go to state 30
    type                           shift and go to state 31

state 22

    (7) declaration -> type idNum Opening_Parentheses . parameter Closing_Parentheses statement
    (23) parameter -> . listOfParameters
    (24) parameter -> .
    (25) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (26) listOfParameters -> . paramTypeList
    (27) paramTypeList -> . type paramList
    (17) type -> . Boolean_KW
    (18) type -> . Character_KW
    (19) type -> . Integer_KW
    (20) type -> . char_KW
    (21) type -> . bool_KW
    (22) type -> . int_KW

    Closing_Parentheses reduce using rule 24 (parameter -> .)
    Boolean_KW      shift and go to state 6
    Character_KW    shift and go to state 7
    Integer_KW      shift and go to state 8
    char_KW         shift and go to state 9
    bool_KW         shift and go to state 10
    int_KW          shift and go to state 11

    type                           shift and go to state 31
    parameter                      shift and go to state 33
    listOfParameters               shift and go to state 29
    paramTypeList                  shift and go to state 30

state 23

    (9) declaration -> type idLetter Opening_Parentheses . parameter Closing_Parentheses statement
    (23) parameter -> . listOfParameters
    (24) parameter -> .
    (25) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (26) listOfParameters -> . paramTypeList
    (27) paramTypeList -> . type paramList
    (17) type -> . Boolean_KW
    (18) type -> . Character_KW
    (19) type -> . Integer_KW
    (20) type -> . char_KW
    (21) type -> . bool_KW
    (22) type -> . int_KW

    Closing_Parentheses reduce using rule 24 (parameter -> .)
    Boolean_KW      shift and go to state 6
    Character_KW    shift and go to state 7
    Integer_KW      shift and go to state 8
    char_KW         shift and go to state 9
    bool_KW         shift and go to state 10
    int_KW          shift and go to state 11

    type                           shift and go to state 31
    parameter                      shift and go to state 34
    listOfParameters               shift and go to state 29
    paramTypeList                  shift and go to state 30

state 24

    (15) varForm -> idLetter Opening_Bracket . Num Closing_Bracket

    Num             shift and go to state 35


state 25
